# bakery-projet

./: .env.example  .env.vercel  .env.vercel.prod  .gitignore  AGENTS.md  README.md  bakeryos.db.before_full_app_consistency_20260616  bakeryos.db.before_no_surplus_stock_20260616  bakeryos.db.before_sync_chef_executif_20260616  docker-compose.yml  fix_admin_hash.py  fix_dashboard_final.py  fix_lines.py  fix_remaining.py  generate_april_data.py  package-lock.json  package.json  performance_audit.md  performance_optimization_report.md  refactor.py  refactor_dashboard.py  refactoring_audit.md  requirements.txt  revert_tx.py  start-backend.sh  test_limiter.py  test_limiter2.py  test_limiter3.py  tsconfig.json  vercel.json
backend/: __init__.py  auth.py  bakeryos.db  bakeryos.db.before_balanced_menu_20260616  bakeryos.db.before_day_variety_eggs_0_8_20260615  bakeryos.db.before_recipe_truth_audit_20260615  bootstrap.py  database.py  fix_params.cjs  fix_query.cjs  fix_service.cjs  main.py  migrate_to_cloud.py  migrate_to_sql.py  models.py  pyproject.toml  refactor_intelligence.py  refactor_operations.py  requirements.txt  rewrite_routers_intel.py  schemas.py  test_runner.py
backend/alembic/: env.py
backend/bakeryos_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/routers/: __init__.py  auth.py  catalog.py  currency.py  customers.py  finance.py  integrations.py  intelligence.py  kitchen.py  operations.py  orders.py  pos.py  purchasing.py  reports.py  semi_finished.py  shift_logs.py  staff.py
backend/services/: __init__.py  core.py  customers.py  (+10 more)
(+221 files in other folders)
