[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bakeryos_backend"
version = "0.1.0"
description = "BakeryOS Backend API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic[email]",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "python-multipart",
    "python-jose",
    "slowapi",
    "httpx",
    "pandas",
    "openpyxl",
    "reportlab",
    "python-dotenv",
    "alembic",
    "psycopg2-binary",
    "python-jose[cryptography]",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio",
    "httpx",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"